force-app/main/default/objects/clcommon__Address__c/fields/Address_Confirmed_Comment__c.field-meta.xml
<CustomField>
    <fullName>Address_Confirmed_Comment__c</fullName>
    <label>Address Confirmed Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>