force-app/main/default/objects/clcommon__Address__c/fields/Applicant_and_its_address__c.field-meta.xml
<CustomField>
    <fullName>Applicant_and_its_address__c</fullName>
    <formula>IF(ISBLANK(clcommon__Contact__c),clcommon__Account__r.Name+&apos; &apos;,IF(ISBLANK(clcommon__Contact__r.FirstName),&apos;&apos;,clcommon__Contact__r.FirstName+&apos; &apos;)+IF(ISBLANK(clcommon__Contact__r.MiddleName),&apos;&apos;,clcommon__Contact__r.MiddleName+&apos; &apos;)+IF(ISBLANK(clcommon__Contact__r.LastName),&apos;&apos;,clcommon__Contact__r.LastName+&apos; &apos;))+&apos;of &apos;+ Full_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant and its address</label>
    <type>Text</type>
</CustomField>