force-app/main/default/objects/clcommon__Address__c/fields/clcommon__Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Address_Line_2__c</fullName>
    <description>This field is to be added to capture the additional address line.</description>
    <inlineHelpText>This field is to be added to capture the additional address line.</inlineHelpText>
    <label>Address Line 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>