force-app/main/default/objects/clcommon__Address__c/fields/clcommon__Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is to identify the address as billing address. This checkbox will be enabled only for Account only.</description>
    <inlineHelpText>This checkbox is to identify the address as billing address.</inlineHelpText>
    <label>Billing Address</label>
    <type>Checkbox</type>
</CustomField>