force-app/main/default/objects/clcommon__Address__c/fields/clcommon__Current_Address__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Current_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is to identify the “Current address”  . This checkbox will be enabled for Contact, Account and Collateral</description>
    <inlineHelpText>This checkbox is to identify the “Current address” .</inlineHelpText>
    <label>Current Address</label>
    <type>Checkbox</type>
</CustomField>