force-app/main/default/objects/clcommon__Address__c/fields/clcommon__End_Date__c.field-meta.xml
<CustomField>
    <fullName>clcommon__End_Date__c</fullName>
    <description>This field will store the time spent at a particular address. This is the end month and year.</description>
    <inlineHelpText>This field will store the time spent at a particular address. This is the end month and year.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>