force-app/main/default/objects/clcommon__Address__c/fields/clcommon__Foreign_City_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Foreign_City_Postal_Code__c</fullName>
    <description>This field is to capture the foreign city postal code related to the address, if address is not local.</description>
    <inlineHelpText>This field is to capture the foreign city postal code related to the address, if address is not local.</inlineHelpText>
    <label>Foreign City Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>