force-app/main/default/objects/clcommon__Address__c/fields/clcommon__Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Mailing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is to identify the address as mailing address. This checkbox will be enabled only for Contact only.</description>
    <inlineHelpText>This checkbox is to identify the address as mailing address.</inlineHelpText>
    <label>Mailing Address</label>
    <type>Checkbox</type>
</CustomField>