force-app/main/default/objects/clcommon__Address__c/fields/clcommon__Military_Address__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Military_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to identify if the address is a Military Address.</description>
    <inlineHelpText>This field is to identify if the address is a Military Address.</inlineHelpText>
    <label>Military Address</label>
    <type>Checkbox</type>
</CustomField>