force-app/main/default/objects/clcommon__Address__c/fields/clcommon__Military_Post_Office_Box__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Military_Post_Office_Box__c</fullName>
    <description>This field will be enabled only if the Military address checkbox is true .It will store the Army Post Office or Fleet Post Office Box number if the address is a military address.</description>
    <inlineHelpText>This field will store the Army Post Office or Fleet Post Office Box number if the address is a military address.</inlineHelpText>
    <label>Military Post Office Box</label>
    <length>255</length>
    <type>Text</type>
</CustomField>