force-app/main/default/objects/clcommon__Address__c/fields/clcommon__Military_Postal_Service_Center__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Military_Postal_Service_Center__c</fullName>
    <description>This field will be enabled only if the Military address checkbox is true .This field will store the postal service center if the address is a military address.</description>
    <inlineHelpText>This field will store the postal service center if the address is a military address.</inlineHelpText>
    <label>Military Postal Service Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>