force-app/main/default/objects/clcommon__Address__c/fields/clcommon__Other_Address__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Other_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is to identify an address as Previous address. This checkbox will be enabled for Contact and  Account.</description>
    <inlineHelpText>This checkbox is to identify an address as Previous address.</inlineHelpText>
    <label>Other Address</label>
    <type>Checkbox</type>
</CustomField>