force-app/main/default/objects/clcommon__Address__c/fields/clcommon__Primary_Address__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Primary_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is to identify the address as primary address. This checkbox will be enabled for Contact and  Account.</description>
    <inlineHelpText>This checkbox is to identify the address as primary address.</inlineHelpText>
    <label>Primary Address</label>
    <type>Checkbox</type>
</CustomField>