force-app/main/default/objects/clcommon__Address__c/fields/clcommon__Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Shipping_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is to identify the address as shipping address. This checkbox will be enabled only for Account only.</description>
    <inlineHelpText>This checkbox is to identify the address as shipping address.</inlineHelpText>
    <label>Shipping Address</label>
    <type>Checkbox</type>
</CustomField>