force-app/main/default/objects/clcommon__Address__c/fields/clcommon__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Start_Date__c</fullName>
    <description>This field will store the time spent at a particular address. This is the start month and year.</description>
    <inlineHelpText>This field will store the time spent at a particular address. This is the start month and year.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>