force-app/main/default/objects/clcommon__Address__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <formula>IF(NOT(ISNULL(clcommon__County__c)) &amp;&amp; NOT(ISBLANK(clcommon__County__c)), clcommon__County__c+&apos; &apos; , &apos;&apos;)+IF(NOT(ISNULL(Street_No__c)) &amp;&amp; NOT(ISBLANK(Street_No__c)), Street_No__c+&apos; &apos; , &apos;&apos;)+IF(NOT(ISNULL(Street_Name__c)) &amp;&amp; NOT(ISBLANK(Street_Name__c)), Street_Name__c+&apos; &apos; , &apos;&apos;)+IF(NOT(ISNULL(Duplicate_Street_Type__c)) &amp;&amp; NOT(ISBLANK(Duplicate_Street_Type__c)), Duplicate_Street_Type__c , &apos;&apos;)+&apos;, &apos;+IF(NOT(ISNULL(clcommon__City__c)) &amp;&amp; NOT(ISBLANK(clcommon__City__c)), clcommon__City__c+&apos; &apos; , &apos;&apos;)+IF(NOT(ISNULL(Duplicate_State_Name__c)) &amp;&amp; NOT(ISBLANK(Duplicate_State_Name__c	)), Duplicate_State_Name__c+&apos; &apos; , &apos;&apos;)+IF(NOT(ISNULL(clcommon__Zip_Code__c)) &amp;&amp; NOT(ISBLANK(clcommon__Zip_Code__c)), clcommon__Zip_Code__c , &apos;&apos;)+&apos;, &apos;+IF(NOT(ISNULL(clcommon__Country__c)) &amp;&amp; NOT(ISBLANK(clcommon__Country__c)), clcommon__Country__c+&apos; &apos; , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>